# kiwi

./: .gitignore  LICENSE.md  README.md  bigint.sk  cli.js  index.html  kiwi-esm.js  kiwi.h  kiwi.js  kiwi.sk  package.json  typedarray.sk
benchmark/js/: kiwi.d.ts  kiwi.js  package-lock.json  package.json  protobuf.js  test.kiwi  test.proto
examples/: cpp.md  js.md  rust.md  skew.md
js/: bb.ts  binary.ts  browser.ts  cli.js  cli.ts  cpp-callback.ts  cpp.ts  js.ts  kiwi.d.ts  kiwi.js  kiwi.ts  package-lock.json  package.json  parser.ts  printer.ts  schema.ts  skew-types.ts  skew.ts  ts.ts  tsconfig.browser.json  tsconfig.json  util.ts
rust/: Cargo.toml
rust-codegen/: Cargo.toml  README.md
rust-codegen/codegen/: Cargo.toml  README.md  mod.rs
rust-codegen/codegen/src/: errors.rs  keywords.rs  lib.rs  main.rs  parser.rs  types.rs
rust-codegen/runtime/: Cargo.toml
rust-codegen/runtime/src/: errors.rs  message.rs  reader.rs  schema.rs  writer.rs
rust-codegen/runtime/tests/: round_trip_tests.proptest-regressions  round_trip_tests.rs
rust-codegen/src/: lib.rs  reader.rs  schema.rs  writer.rs
rust/src/: lib.rs
test/: test-callback.cpp  test-schema-callback.h  test-schema-large.h  test-schema-large.kiwi  test-schema-large.sk  test-schema-round-trip.kiwi  test-schema-types.sk  test-schema.h  test-schema.js  test-schema.kiwi  test-schema.sk  test-schema.ts  test.cpp  test.js  test.sh  test.sk  test1-schema.bkiwi  test1-schema.h  test1-schema.kiwi  test1-schema.sk  test2-schema.bkiwi  test2-schema.h  test2-schema.kiwi  test2-schema.sk
www/: index.html
