[package]
name = "quick-kiwi"
description = "A pure Rust kiwi (de)serializer. Quick."
version = "0.6.0"
authors = ["Colton Pierson <colton@coltonpierson.com>"]
keywords = ["kiwi", "parser"]
license = "MIT"
readme = "README.md" 
documentation = "https://docs.rs/kiwi"
repository = "https://github.com/evanw/kiwi"

[dependencies]
byteorder = "1.2.1"
failure = "0.1.1"
failure_derive = "0.1.1"

[dev-dependencies]
lazy_static = "0.2.10"
